# starpower-core

./: .gitignore  README.md  pyproject.toml
Autonomous-main/Models/OpenRouter/: GLM4.5-Air.py  QWEN3.5-9B.py  Qwen3.6PlusPreview.py  TrinityLarge.py
Perspective-SDK-main/: README.md  starpower-perspective-sdk-v1-55.ipynb
Teaching-A-Language-Model-From-Scratch-main/: README.md  Savvy’s First Conversation.md
Voice-Agents-main/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
Voice-Agents-main/components/: ControlBar.tsx  FilePanel.tsx  LiveView.tsx  SettingsModal.tsx  Sidebar.tsx
Voice-Agents-main/hooks/: useGeminiLive.ts
Voice-Agents-main/utils/: audio.ts
starpower_core/: __init__.py  agents.py  audit.py  cli.py  memory.py  vsa.py
starpower_core/adapters/: __init__.py  b_heard.py  massive_magnetics.py
tests/: test_memory.py  test_orchestrator.py  test_vsa.py
