[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starpower-core"
version = "0.1.0"
description = "Local-first vector-symbolic multi-agent runtime for MASSIVEMAGNETICS and B Heard Network."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MASSIVEMAGNETICS" }]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "networkx>=3.3",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
]

[project.scripts]
starpower = "starpower_core.cli:main"

[tool.setuptools.packages.find]
include = ["starpower_core*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
